# SeriousProton

./: .gitignore  .tinyci  Box2D-updates.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: DrMingw.cmake  FindSFML.cmake  FindSeriousProton.cmake  Findbox2d.cmake  Findglew.cmake  Findjson11.cmake  Findlua.cmake  Findseriousproton.cmake  GenerateGlDebug.cmake  SeriousProtonConfig.cmake.in  SteamSDK.cmake  UseSeriousProton.cmake  config.h.in  glDebug.inl.in
libs/Box2D/Collision/Shapes/: b2PolygonShape.cpp
libs/Box2D/Common/: b2Math.h
libs/GL/: glew.h
libs/basis_universal/: CMakeLists.txt
libs/box2d/: CMakeLists.txt
libs/cmake/: freetype-config-version.cmake  freetype-config.cmake
libs/dtoa/: dtoa_milo.h
libs/glad/: CMakeLists.txt
libs/glad/glad/: glad.c  glad.h
libs/json11/: CMakeLists.txt
libs/ldump/: .busted  .gitignore  LICENSE  README.md  init.lua
libs/ldump/.github/workflows/: run_tests.yaml
libs/ldump/benchmark/: run.lua  utils.lua
libs/ldump/docs/: api.md  development.md  overloading.md  safety.md  serializing_modules.md
libs/ldump/tests/: _busted.lua  test_ldump.lua  test_safety.lua  test_static.lua  test_use_case.lua  utils.lua
libs/ldump/tests/resources/: deterministic.lua
libs/libopus/: CMakeLists.txt
libs/lua/: CMakeLists.txt  lapi.c  lua.h
libs/rg_etc1/: rg_etc1.cpp
libs/stb/: stb_image_write.h  stb_vorbis.h
masterserver/: README.md  config.inc.php  list.php  readme.txt  register.php
src/: Collisionable.cpp  Collisionable.h  P.cpp  P.h  PlayerController.cpp  PlayerController.h  Renderable.cpp  Renderable.h  Updatable.cpp  Updatable.h  astar.h  clipboard.cpp  clipboard.h  collisionable.cpp  collisionable.h  dynamicLibrary.cpp  dynamicLibrary.h  engine.cpp  engine.h  event.cpp  event.h  fixedSocket.cpp  fixedSocket.h  gameEntity.cpp  gameEntity.h  httpServer.cpp  httpServer.h  i18n.cpp  i18n.h  input.cpp  input.h  keyValueTree.cpp  keyValueTree.h  logging.cpp  logging.h  multiplayer.cpp  multiplayer.h  multiplayer.hpp  multiplayer_client.cpp  multiplayer_client.h  (+45 more)
src/Box2D/: CMakeLists.txt
src/Box2D/Collision/Shapes/: b2PolygonShape.h
src/Box2D/Common/: b2GrowableStack.h  b2Settings.h
src/Box2D/Dynamics/: b2World.cpp
src/Box2D/Dynamics/Joints/: b2PrismaticJoint.cpp
src/Box2D/include/box2d/: b2_common.h  b2_polygon_shape.h
src/Box2D/src/collision/: b2_polygon_shape.cpp
src/GL/: CMakeLists.txt
src/audio/: music.cpp  music.h  sound.cpp  sound.h  source.cpp  source.h
src/components/: collision.h  multiplayer.h
src/container/: bitset.h  chunkedvector.h  sparseset.h
src/dtoa/: dtoa_milo.h
src/ecs/: component.cpp  component.h  entity.cpp  entity.h  multiplayer.h  query.h  system.h
src/expr/: cexpression.cpp  cexpression.h
src/graphics/: alignment.h  font.cpp  font.h  freetypefont.cpp  freetypefont.h  image.cpp  image.h  ktx2texture.cpp  ktx2texture.h  opengl.cpp  opengl.h  openglDesktop.h  opengles2.h  renderTarget.cpp  renderTarget.h  renderTexture.cpp  renderTexture.h  shader.cpp  shader.h  texture.cpp  texture.h  textureAtlas.cpp  textureAtlas.h
src/i18n/: cexpression.cpp  cexpression.h
src/io/: dataBuffer.h  json.h  keyValueTreeLoader.cpp  keyValueTreeLoader.h  keybinding.cpp  keybinding.h  pointer.h  textinput.h
src/io/http/: request.cpp  request.h  server.cpp  server.h  websocket.cpp  websocket.h
src/io/network/: address.cpp  address.h  selector.cpp  selector.h  socketBase.cpp  socketBase.h  steamP2PListener.cpp  steamP2PListener.h  steamP2PSocket.cpp  steamP2PSocket.h  streamSocket.cpp  streamSocket.h  tcpListener.cpp  tcpListener.h  tcpSocket.cpp  tcpSocket.h  udpSocket.cpp  udpSocket.h
src/libopus/: CMakeLists.txt
src/libopus/config/: config.h
src/lua/: CMakeLists.txt  llex.c  lmathlib.c  lvm.c
src/multiplayer/: collision.cpp  collision.h
src/script/: callback.cpp  callback.h  component.h  conversion.h  coroutine.cpp  coroutine.h  environment.cpp  environment.h
src/stb/: stb_vorbis.h
src/stringutil/: base64.cpp  base64.h  sha1.cpp  sha1.h
src/systems/: collision.cpp  collision.h
